# POO_TP

./: Aparelhos.cpp  Aparelhos.h  CMakeLists.txt  Compomentes.cpp  Compomentes.h  Habitacao.cpp  Habitacao.h  InterfaceC.cpp  InterfaceC.h  Processador.cpp  Processador.h  Propriedade.cpp  Propriedade.h  README.md  Regra.cpp  Regra.h  Sensor.cpp  Sensor.h  Terminal.h  Zona.cpp  Zona.h  esboco_classes.txt  main.cpp
